# bipedalism-scaffolded-learning

./: Makefile  README.md  install.txt
CaseData/case1/: summarisedOutput-05_20_10_06_47  summarisedOutput-05_23_13_24_45  summarisedOutput-05_26_10_46_40
CaseData/case2/: summarisedOutput-05_27_23_27_40  summarisedOutput-05_28_16_31_22  summarisedOutput-05_31_17_11_40
CaseData/case3/: summarisedOutput-06_13_00_02_04  summarisedOutput-06_13_20_20_41  summarisedOutput-06_14_14_29_09
CaseData/image/bump-data/: bestall.txt  c1_1.txt  c1_2.txt  c1_3.txt  c2_1.txt  c2_2.txt  c2_3.txt  c3_1.txt  c3_2.txt  c3_3.txt
CaseData/image/fitness-data/: case1-1.txt  case1-2.txt  case1-3.txt  case2-1.txt  case2-2.txt  case2-3.txt  case3-1.txt  case3-2.txt  case3-3.txt
CaseData/image/plot-code/: .~lock.biped_distance.csv#  allcasefitness.py  bodyparameter.py  c1body.py  c2body.py  c3body.py  fitnessplot.py  gait.py
CaseData/image/plot-code/gait_data/: b_horizontal displacement.csv  b_horizontal velocity.csv  b_vertical displacement.csv  b_vertical velocity.csv  biped_distance.csv  distance.csv  t_horizontal displacement.csv  t_horizontal velocity.csv  t_vertical displacement.csv  t_vertical velocity.csv  tripod_distance.csv
evolution/: newEvolver2.py  newEvolver2_SA.py  newEvolver3.py
simbody/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  states.txt
simbody/twoLegVar/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  walker.cpp
